<resources>
    <string name="app_name">Skybound</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_roadmap">Roadmap</string>
    <string name="title_settings">Settings</string>
    <string name="btn_login">Login</string>
    <string name="email_signin">Email</string>
    <string name="password_signin">Password</string>
    <string name="login_signin">Masuk</string>
    <string name="signup_create_signin">Belum punya akun? Sign up di sini</string>
    <string name="masuk_signin">Masuk</string>
    <string name="desc_signin">Silahkan masuk menggunakan email yang telah didaftarkan</string>
    <string name="masukkan_email_signin">Masukkan Email</string>
    <string name="masukkan_password_signin">Masukkan Password</string>
    <string name="signup_signup">Sign Up</string>
    <string name="daftar_signup">Daftar</string>
    <string name="desc_signup">Silahkan masukkan data diri anda</string>

    <string name="text_questionnaire">Yay, kamu berhasil masuk! Sekarang, yuk isi kuesioner berikut ini agar kami bisa lebih paham apa yang kamu butuhkan dan siap beri pengalaman yang paling pas buat kamu</string>
    <string name="next_questionnaire">next</string>
    <string name="first_question_questionnaire">Pertanyaan satu</string>
    <string name="h1_questionnaire">Silahkan isi beberapa pertanyaan dibawah untuk menentukan minat dan karir anda</string>
    <string name="h2_questionnaire">Isi sesuai dengan keadaan anda, karena hasil akhir akan berdampak dengan jawaban anda disini</string>
    <string name="h1_roadmap2">Berdasarkan data yang telah kami terima berikut adalah Roadmap yang sesuai dengan preferensi anda</string>
    <string name="h2_roadmap2">Pilih salah satu roadmad dibawah dan akan kami bantu anda untuk mencapai target</string>
    <string name="settings_name">Pengaturan</string>
    <string name="dark_mode">Tema Gelap</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="logo_name">Skybound Logo</string>
    <string name="user_name">Nama Kamu</string>
    <string name="user_point">1 Poin</string>
    <string name="user_email">Email : onlytaufik47@gmail.com</string>
    <string name="user_status">Status : Mahasiswa</string>
    <string name="user_roadmap">Roadmap : Software Engineer</string>
    <string name="user_gender">Gender : Laki-laki</string>
    <string name="user_telephone">No. Hp : 086723779292</string>
    <string name="user_birth">Tgl. Lahir : 10/10/2003</string>
    <string name="button_out">Keluar</string>
    <string name="user_roadmap_description">Pilihan yang bagus, sekarang kami akan\nmembantu anda menjadi software engineer</string>
    <string name="user_roadmap_name">Materi Kamu</string>
    <string name="user_sub_roadmap">Sub Materi Kamu</string>
    <string name="user_sub_roadmap_detail">24/10/2024\nSkor : 0</string>
    <string name="item_roadmap2">item_roadmap2</string>
    <string name="user_progress_percent">1%</string>
    <string name="user_status_progress">Aktif Status</string>
    <string name="user_streak">1 Hari Berturut</string>
    <string name="user_course_left">1 Materi Tersisa</string>
    <string name="user_days_left">1 Hari\nTersisa</string>
    <string name="your_progress">Progress Kamu</string>


    <string name="text_subtitle">Anda harus menjawab pertanyaan untuk melanjutkan</string>
    <string name="back_questionnaire">Back</string>
    <string name="decorative_image">Decorative Image</string>
    <string name="user_list_course">Pengenalan Software Engineer</string>
    <string name="user_course_deadline">24/10/2024 - 31/10/2024</string>
    <string name="user_course_name">Introduction to Software</string>
    <string name="user_course_description">Berikut merupakan materi yang perlu anda pahami sebelum mengerjakan soal</string>
    <string name="do_quiz">Kerjakan Soal</string>
    <string name="user_course">Pengertian Software</string>
    <string name="user_course_body">Software adalah sekumpulan instruksi atau program yang dirancang untuk menjalankan tugas-tugas tertentu pada perangkat komputer. Berbeda dengan perangkat keras (hardware) yang merupakan komponen fisik, software bersifat tidak berwujud dan berfungsi sebagai penghubung antara pengguna dan perangkat keras untuk menjalankan operasi. Software terdiri dari beberapa jenis, seperti sistem operasi yang mengatur sumber daya komputer, aplikasi yang digunakan untuk menyelesaikan pekerjaan spesifik, serta perangkat lunak pendukung lainnya seperti driver atau utilitas. Dengan software, komputer dapat digunakan untuk berbagai keperluan, mulai dari pengolahan data hingga hiburan, sesuai dengan fungsionalitas yang dirancang oleh pengembangnya.</string>
    <string name="next_course">Materi Selanjutnya</string>
    <string name="user_sub_course_name">Pengenalan Software</string>
    <string name="username_signup">Username</string>
    <string name="phone_number_signup">Nomor Telepon</string>
    <string name="date_of_birth_signup">Tanggal Lahir</string>
    <string name="gender_signup">Jenis Kelamin</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="birthdate_hint">Klik untuk memasukkan tanggal</string>
    <string name="username_hint">Masukkan Nama</string>
    <string name="konfirmasi_password_hint">Konfirmasi password anda</string>
    <string name="status_hint">Pelajar/Freelancer/Guru</string>
    <string name="status_atau_pekerjaan">Pekerjaan</string>
    <string name="verify_otp">Verifikasi</string>
    <string name="otp_prompt">Masukkan kode OTP</string>

</resources>