<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/signup"
    android:padding="16dp">

    <!-- Logo/Image -->

    <!-- Title Text -->
    <ImageView
        android:layout_width="189dp"
        android:layout_height="217dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvMasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:textSize="40sp"
        android:text="@string/daftar_signup"
        android:textColor="@color/black"
        android:textStyle="bold" />



    <!-- Description Text -->
    <TextView
        android:id="@+id/tvDescSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/desc_signup"
        android:textStyle="bold" />

    <!-- Label for Email -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/email_signin"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"/>

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_email_signin"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Label for Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_signin"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"/>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_password_signin"
        android:layout_marginTop="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Konfirmasi Password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"/>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan Konfirmasi Password"
        android:layout_marginTop="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button, aligned to the right -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup_signup" />
</LinearLayout>
