<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/signin">

        <!-- Logo/Image -->

        <!-- Title Text -->
        <ImageView
            android:layout_width="189dp"
            android:layout_height="217dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tvMasuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:textSize="40sp"
            android:text="@string/masuk_signin"
            android:textColor="@color/titleColor"
            android:textStyle="bold" />



        <!-- Description Text -->
        <TextView
            android:id="@+id/tvDescSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/desc_signin"
            android:textStyle="bold" />

        <!-- Label for Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/email_signin"
            android:textStyle="bold"
            android:textColor="@color/titleColor"
            android:layout_marginTop="16dp"/>

        <!-- Email Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Label for Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_signin"
            android:textStyle="bold"
            android:textColor="@color/titleColor"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"/>

        <!-- Password Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button, aligned to the right -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_signin" />

        <!-- Sign Up Link, aligned to the right -->
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="40dp"
            android:focusable="true"
            android:text="@string/signup_create_signin"
            android:textColor="@color/primaryColor"
            android:clickable="true"/>
    </LinearLayout>
</ScrollView>